[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiml_python_xml"
dynamic = ["version"]
description = "Use Python to write Swimming Markup Language (swiML)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name="Christoph Bartneck", email="christoph.bartneck@canterbury.ac.nz" },
  { name="Callum Lockhart", email="clo78@uclive.ac.nz" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/bartneck/swiML#readme"
Issues = "https://github.com/bartneck/swiML/issues"
Source = "https://github.com/bartneck/swiML"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/swiml_python_xml tests}"

[tool.coverage.run]
source_pkgs = ["swiml_python_xml", "tests"]
branch = true
parallel = true
omit = [
  "src/swiml_python_xml/__about__.py",
]

[tool.coverage.paths]
swiml_python_xml = ["src/swiml_python_xml", "*/swiml_python_xml/src/swiml_python_xml"]
tests = ["tests", "*/swiml_python_xml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.version]
path = "src/swiml_python_xml/__about__.py"
